--- a/TstStreamAuctioneer/TstStreamAuctioneer.csproj
+++ b/TstStreamAuctioneer/TstStreamAuctioneer.csproj
@@ -1268,9 +1268,10 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="SPA\app.js" />
     <Content Include="SPA\Controllers\AuctionController.js" />
+    <Content Include="SPA\Controllers\ModalController.js" />
     <Content Include="SPA\Controllers\TabsController.js" />
     <Content Include="SPA\Views\Left.html" />
-    <Content Include="SPA\Views\Modal.html" />
+    <Content Include="SPA\Views\Modal\Buyout.html" />
     <Content Include="SPA\Views\Right.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
